--- a/_includes/archive-single-cv1.html
+++ b/_includes/archive-single-cv1.html
@@ -27,15 +27,16 @@
       </div>
     {% endif %}
     <h3 class="archive__item-title" itemprop="headline">
-<!--        {% elsif post.paperurl %}-->
-<!--        <a href=" {{ post.paperurl }} ">{{ title }}</a>-->
-      {% if post.paperurl and post.venue %}
-        <a href=" {{ post.paperurl }} ">{{ title }}</a>, in <i>{{ post.venue }}</i>, {{ post.date | default: "1900-01-01" | date: "%Y" }}.
-      {% elsif post.paperurl %}
-        <a href=" {{ post.paperurl }} ">{{ title }}</a>, manuscript.
-<!--      {% else %}-->
-<!--        <a href="{{ base_path }}{{ post.paperurl }}" rel="permalink">{{ title }}</a>-->
-      {% endif %}
+        {% if post.paperurl %}
+          {% if post.venue %}</a>
+            <p><a href=" {{ post.paperurl }} ">{{ title }}</a>, in <i>{{ post.venue }}</i>, {{ post.date | default: "1900-01-01" | date: "%Y" }}.</p>
+          {% else %}
+            <a href=" {{ post.paperurl }} ">{{ title }}</a>, manuscript.
+          {% endif %}
+
+        {% else %}
+            <a href="{{ base_path }}{{ post.paperurl }}" rel="permalink">{{ title }}</a>
+        {% endif %}
     </h3>
     {% if post.read_time %}
       <p class="page__meta"><i class="fa fa-clock" aria-hidden="true"></i> {% include read-time.html %}</p>
@@ -44,3 +45,6 @@
     </li>
  </article>
 </div>
+
+<!--        {% elsif post.paperurl %}-->
+<!--        <a href=" {{ post.paperurl }} ">{{ title }}</a>-->
