--- a/_includes/archive-single-cv1.html
+++ b/_includes/archive-single-cv1.html
@@ -33,13 +33,12 @@
             <a href="{{ base_path }}{{ post.paperurl }}" rel="permalink">{{ title }}</a>
         {% endif %}
     </h3>
-        {% if post.paperurl %}
-            <u>test</u>
-          {% if post.venue %}
-            <p>In <i>{{ post.venue }}</i>, {{ post.date | default: "1900-01-01" | date: "%Y" }}.</p>
-          {% else %}
-            <p> Manuscript.</p>
-          {% endif %}
+<!--        {% if post.paperurl %}-->
+<!--          {% if post.venue %}-->
+<!--            <p>In <i>{{ post.venue }}</i>, {{ post.date | default: "1900-01-01" | date: "%Y" }}.</p>-->
+<!--          {% else %}-->
+<!--            <p> Manuscript.</p>-->
+<!--          {% endif %}-->
 
     {% if post.read_time %}
       <p class="page__meta"><i class="fa fa-clock" aria-hidden="true"></i> {% include read-time.html %}</p>
