--- a/_includes/archive-single-cv1.html
+++ b/_includes/archive-single-cv1.html
@@ -36,7 +36,9 @@
     {% if post.read_time %}
       <p class="page__meta"><i class="fa fa-clock" aria-hidden="true"></i> {% include read-time.html %}</p>
     {% endif %}
-    {% if post.venue%}<p class="archive__item-excerpt" itemprop="description">{{ post.citation }}</p> {% endif %}
+<!--    {% if post.venue%}<p class="archive__item-excerpt" itemprop="description">{{ post.citation }}</p> {% endif %}-->
+    {% if post.venue%}<p class="archive__item-excerpt" itemprop="description">(with {{ post.authors }}), in {{ post.venue }}</p> {% endif %}
+<!--    {% if post.arxiv%}<p class="archive__item-excerpt" itemprop="description">{{ post.citation }}</p> {% endif %}-->
     </li>
  </article>
 </div>
