--- a/_includes/archive-single-cv1.html
+++ b/_includes/archive-single-cv1.html
@@ -37,8 +37,11 @@
       <p class="page__meta"><i class="fa fa-clock" aria-hidden="true"></i> {% include read-time.html %}</p>
     {% endif %}
 <!--    {% if post.venue%}<p class="archive__item-excerpt" itemprop="description">{{ post.citation }}</p> {% endif %}-->
-    {% if post.venue%}<p class="archive__item-excerpt" itemprop="description">(with {{ post.authors }}), in {{ post.venue }}</p> {% endif %}
-<!--    {% if post.arxiv%}<p class="archive__item-excerpt" itemprop="description">{{ post.citation }}</p> {% endif %}-->
+    {% if post.venue and post.other_authors %}
+      <p class="archive__item-excerpt" itemprop="description">(with {{ post.other_authors }}), in {{ post.venue }}</p>
+    {% elsif post.venue %}
+      <p class="archive__item-excerpt" itemprop="description">in {{ post.venue }}</p>
+    {% endif %}
     </li>
  </article>
 </div>
