--- a/_includes/archive-single-cv1.html
+++ b/_includes/archive-single-cv1.html
@@ -37,19 +37,21 @@
       <p class="page__meta"><i class="fa fa-clock" aria-hidden="true"></i> {% include read-time.html %}</p>
     {% endif %}
 <!--    {% if post.venue%}<p class="archive__item-excerpt" itemprop="description">{{ post.citation }}</p> {% endif %}-->
-    {% if post.venue and post.other_authors %}
-      {% if post.arxiv %}
-        <p class="archive__item-excerpt" itemprop="description">with {{ post.other_authors }}<br> preprint <i>{{ post.venue }}</i></p>
-      {% else %}
-        <p class="archive__item-excerpt" itemprop="description">with {{ post.other_authors }}<br> in <i>{{ post.venue }}</i></p>
+    <small>
+      {% if post.venue and post.other_authors %}
+        {% if post.arxiv %}
+          <p class="archive__item-excerpt" itemprop="description">(with {{ post.other_authors }}), preprint <i>{{ post.venue }}</i></p>
+        {% else %}
+          <p class="archive__item-excerpt" itemprop="description">(with {{ post.other_authors }}), in <i>{{ post.venue }}</i></p>
+        {% endif %}
+      {% elsif post.venue %}
+        {% if post.arxiv %}
+          <p class="archive__item-excerpt" itemprop="description">preprint <i>{{ post.venue }}</i></p>
+        {% else %}
+          <p class="archive__item-excerpt" itemprop="description">in <i>{{ post.venue }}</i></p>
+        {% endif %}
       {% endif %}
-    {% elsif post.venue %}
-      {% if post.arxiv %}
-        <p class="archive__item-excerpt" itemprop="description">preprint <i>{{ post.venue }}</i></p>
-      {% else %}
-        <p class="archive__item-excerpt" itemprop="description">in <i>{{ post.venue }}</i></p>
-      {% endif %}
-    {% endif %}
+    </small>
     </li>
  </article>
 </div>
