--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,6 +9,8 @@ layout: compress
   <head>
     {% include head.html %}
     {% include head/custom.html %}
+    {% seo %}
+    <meta name="google-site-verification" content="jef-9a2lAWCpWBNuhTn5ZjonVGw6pN80sZFAWppqbFg" />
   </head>
 
   <body>
